<resources>
    <string name="app_name">pycode</string>
    <string name="phone_number">Phone Number</string>
    <string name="Enterotp">Submit</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="time_remain">Time Remain:</string>
    <string name="Pycode">Pycode</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Pycode</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="start_course">Start Course</string>
    <string name="fundamental">Fundamental</string>
    <string name="IntroductionofPython">Introduction</string>
    <string name="Installation">Installation</string>
    <string name="ConditionalStatements">Conditions</string>
    <string name="Looping">Looping</string>
    <string name="ControlStatements">Control Statements</string>
    <string name="StringManipulation">String Manipulation</string>
    <string name="Lists">Lists</string>
    <string name="Tuple">Tuple</string>
    <string name="Dictionaries">Dictionaries</string>
    <string name="Functions">Functions</string>
    <string name="Modules">Modules</string>
    <string name="InputOutput">Input-Output</string>
    <string name="ExceptionHandling">Exception Handling</string>
    <string name="Operator">Operator</string>
    <string name="inputoutputinpython">Input and Output</string>
    <string name="rate_us">Rate us</string>
    <string name="Videos">Videos</string>
    <string name="Run">Run Code</string>
    <string name="exit">Exit</string>
    <string name="bookmark">Bookmark</string>
    <string name="Home">Home</string>
    <string name="Exit">Exit</string>
    <string name="next">Next</string>
    <string name="native_advanced_app_unit_id">ca-app-pub-3774908939242242/2361845081</string>
    <!--<string name="native_advanced_app_unit_id">ca-app-pub-3774908939242242/2361845081</string>-->
</resources>
