<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E1F1FF"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.priyanka.pycode.taskscreen">


    <Button
        android:id="@+id/start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:foregroundGravity="center"
        android:focusable="true"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/start_button_design"
        android:text="@string/start_course"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_below="@+id/start"
        android:layout_above="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ad_container"
            android:layout_margin="10dp"
            android:elevation="3dp"

            >

        </androidx.cardview.widget.CardView>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/bottom"
        android:layout_alignParentBottom="true"
        android:background="#112842"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/rateus"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:src="@drawable/ic_star_black_24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="13dp"
                android:text="@string/rate_us"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/book"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:src="@drawable/ic_collections_bookmark_black_24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="13dp"
                android:text="@string/bookmark"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/exit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:src="@drawable/ic_exit_to_app_black_24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="13dp"
                android:text="@string/exit"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/video"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:src="@drawable/ic_ondemand_video_black_24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="13dp"
                android:text="@string/Videos"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/run"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:src="@drawable/ic_play_arrow_black_24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="13dp"
                android:text="@string/Run"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>