<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.priyanka.pycode.Creating_a_List">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_creating_a_list"
        android:layout_width="match_parent"
        app:title="Creating List"
        android:background="#112842"
        app:titleTextColor="#fff"
        android:layout_height="wrap_content">


    </androidx.appcompat.widget.Toolbar>

    <WebView
        android:id="@+id/accesing_element_webview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/adView"
        android:layout_below="@+id/toolbar_creating_a_list"
        android:layout_centerInParent="true"
        android:layout_marginBottom="0dp">


    </WebView>
    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        />


    <LinearLayout


        android:id="@+id/l"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="#112842"
        android:weightSum="10">

        <LinearLayout
            android:id="@+id/home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <ImageView

                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:src="@drawable/ic_home_black_24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="13dp"
                android:text="@string/Home"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/share"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <ImageView

                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:src="@drawable/ic_share_black_24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="13dp"
                android:text="@string/menu_share"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/exit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <ImageView

                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:src="@drawable/ic_exit_to_app_black_24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="13dp"
                android:text="@string/Exit"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/video"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <ImageView

                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:src="@drawable/ic_ondemand_video_black_24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="13dp"
                android:text="@string/Videos"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/run"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <ImageView

                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:src="@drawable/ic_play_arrow_black_24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="13dp"
                android:text="@string/Run"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

        </LinearLayout>

    </LinearLayout>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/l"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3774908939242242/5917946717">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>