<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E3F2FE"
    android:orientation="vertical"
    tools:context="com.priyanka.pycode.startcourse">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/start_course_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#008DFF"
        app:title="Topics in Python"
        app:titleTextColor="#fff">

    </androidx.appcompat.widget.Toolbar>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="8"
                android:background="@drawable/b"
                android:text="Fundamental of Python"
                android:textAllCaps="false"
                android:textColor="#0178DA"
                android:textSize="18sp" />


            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="8"
                android:background="@drawable/b"
                android:text="Introduction of Python"
                android:textAllCaps="false"
                android:textColor="#0178DA"
                android:textSize="18sp" />


            <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                ads:adSize="BANNER"
                ads:adUnitId="ca-app-pub-3774908939242242/5917946717"></com.google.android.gms.ads.AdView>


            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="8"
                android:background="@drawable/b"
                android:text="Operators in Python"
                android:textAllCaps="false"
                android:textColor="#0178DA"
                android:textSize="18sp" />


            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="8"
                android:background="@drawable/b"
                android:text="Input and Output Function"
                android:textAllCaps="false"
                android:textColor="#0178DA"
                android:textSize="18sp" />


            <Button
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="8"
                android:background="@drawable/b"
                android:padding="15dp"
                android:text="Conditional Statements"
                android:textAllCaps="false"
                android:textColor="#0178DA"
                android:textSize="18sp" />


            <Button
                android:id="@+id/button8"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="8"
                android:background="@drawable/b"
                android:text="Looping in Python"
                android:textAllCaps="false"
                android:textColor="#0178DA"
                android:textSize="18sp" />


            <Button
                android:id="@+id/button9"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="8"
                android:background="@drawable/b"
                android:text="@string/ControlStatements"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#0178DA"
                android:textSize="18sp" />


            <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                ads:adSize="BANNER"
                ads:adUnitId="ca-app-pub-3774908939242242/5917946717"></com.google.android.gms.ads.AdView>


            <Button
                android:id="@+id/button10"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="8"
                android:background="@drawable/b"
                android:text="@string/StringManipulation"
                android:textAllCaps="false"
                android:textColor="#0178DA"
                android:textSize="18sp" />


            <Button
                android:id="@+id/button11"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="8"
                android:background="@drawable/b"
                android:text="Lists in Python"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#0178DA"
                android:textSize="18sp" />


            <Button
                android:id="@+id/button12"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="8"
                android:background="@drawable/b"
                android:text="Tuple in Python"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#0178DA"
                android:textSize="18sp" />


            <Button
                android:id="@+id/button13"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="8"
                android:background="@drawable/b"

                android:text="Dictionaries in Python"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#0178DA"
                android:textSize="18sp" />


            <Button
                android:id="@+id/button14"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="8"
                android:background="@drawable/b"
                android:text="Function in Python"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#0178DA"
                android:textSize="18sp" />

            <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                ads:adSize="BANNER"
                ads:adUnitId="ca-app-pub-3774908939242242/5917946717"></com.google.android.gms.ads.AdView>


            <Button
                android:id="@+id/button15"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="8"
                android:background="@drawable/b"
                android:text="Modules in Python"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#0178DA"
                android:textSize="18sp" />


            <Button
                android:id="@+id/button17"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="8"
                android:background="@drawable/b"
                android:text="@string/ExceptionHandling"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#0178DA"
                android:textSize="18sp" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>